/*
SPDX-FileCopyrightText: 2022-present Open Networking Foundation <info@opennetworking.org>

SPDX-License-Identifier: Apache-2.0
*/

syntax = "proto3";

package atomix.primitive.v1;

import "atomix/primitive/v1/primitive.proto";
import "google/protobuf/any.proto";
import "gogoproto/gogo.proto";

service SessionService {
    rpc OpenSession (OpenSessionRequest) returns (OpenSessionResponse);
    rpc CloseSession (CloseSessionRequest) returns (CloseSessionResponse);
}

message Session {
    SessionMeta meta = 1 [
        (gogoproto.nullable) = false,
        (gogoproto.embed) = true
    ];
    Primitive primitive = 2 [
        (gogoproto.nullable) = false
    ];
    google.protobuf.Any config = 3;
}

message SessionMeta {
    SessionId id = 1 [
        (gogoproto.customname) = "ID",
        (gogoproto.nullable) = false
    ];
    map<string, string> labels = 2;
}

message SessionId {
    string name = 1;
}

message OpenSessionRequest {
    Session session = 1;
}

message OpenSessionResponse {

}

message CloseSessionRequest {
    PrimitiveId primitive = 1 [
        (gogoproto.nullable) = false
    ];
    SessionId session = 2 [
        (gogoproto.nullable) = false
    ];
}

message CloseSessionResponse {

}
